--- a/index.html
+++ b/index.html
@@ -120,6 +120,76 @@
                 <h4>「ショットガンを持ったおばちゃんと<br>
                     仲良くなれるくらいには、気さくな人間です」</h4>
             </div>
+            <div class="message-content">
+                <p>
+                    大学卒業後、フリーのジャーナリストとしてゴミ山やスラム街で<br>
+                    生きる子どもたちを取材してきました。<br>
+                </p>
+                <p>
+                    子どもたちが必死に生きている姿を見て、<br>
+                    <span>「世界は美しく、残酷だ」<br></span>
+                    と強く感じることとなりました。<br>
+                </p>
+                <p>
+                    国際協力の活動を通して、自分の無力感を感じることが多々ありました。<br>
+                    ボランティアだけでは持続的な支援をすることはなかなかできず、<br>
+                    自分自身の能力をもっと高める必要があると考えました。
+                </p>
+                <p>
+                    一度、国際協力の活動から身を引き、<br>
+                    ビジネス的な能力を社会貢献活動に活かせるようになれたらと思い、IT業界で働きました。<br>
+                    メガベンチャー3社経験、1社起業を経験しました。<br>
+                </p>
+                <p>
+                    新卒からストレートで働き続けたキャリアではありませんが、<br>
+                    その分、チャレンジ回数と試行錯誤の回数は
+                    人の倍以上行ってきたこともあり、気づいた時には、<br>
+                    <span>「IT」のことに詳しくなり、<br>「IT」の可能性にワクワクをするようになりました。</span>
+                </p>
+                <p>
+                    がむしゃらに突き進んだ結果として、経験職種が幅広く、
+                </p>
+                <div class="logo">
+                    <ul>
+                        <li>webディレクター</li>
+                        <li>SEOライター、編集者</li>
+                        <li>採用人事、育成担当</li>
+                        <li>映像制作、動画編集、企画、進行管理</li>
+                        <li>SNS運用コンサル</li>
+                    </ul>
+                    <img src="Logo.png" alt="ロゴ">
+                </div>
+                <p>1人で多くのことができるようになりました。</p>
+                <p>そうした経験を活かし、様々なご縁から、<br>
+                    現在は「ITなんでも屋さん」のような立ち位置で、
+                    お仕事をさせていただいております。
+                </p>
+                <p><span>「ITの力を通して、不可能を可能にしていく」</span>
+                    「ITなんでも屋さん」として、信念を持ってサービスを世の中に届けている人たちのお手伝いをしたいと考えています。
+                    現在は、中小企業様、NPO法人様などを中心にお取引をさせていただいております。
+                </p>
+                <p>
+                    実際にweb担当としてスポットで入り、<br>
+                    事業経営の視点とIT観点からサービスをお手伝いをさせていただいております。
+                </p>
+                <p>
+                    ITはとっつきにくいかもしれませんが、<br>
+                    一度身につけたり、うまく使えると、本当に不可能を可能にすることができます。
+                </p>
+                <p>
+                    実際に、子ども食堂で、2週間で300件ほどの注文がLINEに来ていた代表者様の課題を<br>
+                    予約システムを開発することで、自動化し、月50時間ほど作業時間を短縮しました。
+                </p> 
+                <p>
+                    もし、ここまで読んでいただき、何か課題に感じていることや、<br>
+                    本当はもっとこうしたいなどの想いがありましたら、ぜひ一度お話を聞かせてください。
+                </p>
+                <p>
+                    <span>その想いを「できない」で終わらせるのを一緒にやめましょう。<br></span>
+                    最後までお読みいただきありがとうございました。
+                </p>
+                <h5>原田口 昂弘</h5>
+            </div>
         </div>
         <div class="base-card" id="contact">
             <div class="head-3">
