ハンバーガーメニュー追加

--- a/index.html
+++ b/index.html
@@ -3,23 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <header>
         <a href="index.html">
             <p>TOP</p>
         </a>
-        <ul>
+        <input type="checkbox" id="hidden" class="hidden-checkbox">
+        <label for="hidden" id="hamburger-menu">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
+        <ul class="nav-menu">
             <li><a href="./index.html#achievement" class="nav">事業紹介・実績</a></li>
             <li><a href="./index.html#message" class="nav">メッセージ</a></li>
             <li><a href="./index.html#contact" class="nav">お問い合わせ</a></li>
         </ul>
-        <label for="hidden" id="hamburger-menu">
-            <label for="hidden" id="shadow"></label>
-        </label>
+        <label for="hidden" id="shadow"></label>
     </header>
+    <script src="script.js"></script>
     <main>
         <div class="top-view">
             <h1>ITで出来ないことをなくす</h1>
@@ -78,7 +84,7 @@
                 </div>
                 <div class="wrapper">
                     <div class="item">
-                        <img src=fujilabo.png alt="千早高校授業">
+                        <img src=chihaya.jpg alt="千早高校授業">
                         <summary>都立千早高校<br>キャリア形成の授業運営</summary>
                         <p>毎週2コマ2時間を1年間開催。<br>
                             ライフプラン&ファイナンスプランなどの人生設計から、<br>
@@ -89,7 +95,7 @@
                 </div>
                 <div class="wrapper">
                     <div class="item">
-                        <img src=slumpic.png alt="Tweedia_pic">
+                        <img src=fujilabo.png alt="Tweedia_pic">
                         <summary>学習支援教室<br>ふじらぼ</summary>
                         <p>地元で、小中学生を対象にした学習支援活動を市役所などで開催中。<br>
 
@@ -100,7 +106,7 @@
                 </div>
                 <div class="wrapper">
                     <div class="item">
-                        <img src=slumpic.png alt="Tweedia_pic">
+                        <img src=obento.png alt="Tweedia_pic">
                         <summary>子ども弁当発注システム<br>「HESTIA」構築 運営</summary>
                         <p>地元のNPO法人が子ども弁当を夏休みの期間に提供しています。
 
@@ -157,15 +163,15 @@
                         <li>映像制作、動画編集、企画、進行管理</li>
                         <li>SNS運用コンサル</li>
                     </ul>
-                    <img src="Logo.png" alt="ロゴ">
+                    <img src="logo.jpg" alt="ロゴ">
                 </div>
                 <p>1人で多くのことができるようになりました。</p>
                 <p>そうした経験を活かし、様々なご縁から、<br>
                     現在は「ITなんでも屋さん」のような立ち位置で、
                     お仕事をさせていただいております。
                 </p>
-                <p><span>「ITの力を通して、不可能を可能にしていく」</span>
-                    「ITなんでも屋さん」として、信念を持ってサービスを世の中に届けている人たちのお手伝いをしたいと考えています。
+                <p><span>「ITの力を通して、不可能を可能にしていく」<br></span>
+                    「ITなんでも屋さん」として、信念を持ってサービスを世の中に届けている人たちのお手伝いをしたいと考えています。<br>
                     現在は、中小企業様、NPO法人様などを中心にお取引をさせていただいております。
                 </p>
                 <p>
